--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
   "devDependencies": {
     "@types/node": "^22.14.1",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "mongoose": "^8.13.3",
+    "winston": "^3.17.0"
   }
 }
