--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
-    "dev": "tsc --watch"
+    "start": "node dist/index.js",  
+    "dev": "ts-node-dev --respawn src/index.ts",
+    "test": "ts-node src/client.ts"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,7 @@
   "dependencies": {
     "dotenv": "^16.5.0",
     "mongoose": "^8.13.3",
+    "ts-node-dev": "^2.0.0",
     "winston": "^3.17.0"
   }
 }
